Adding backup by label contract
